# spew

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
examples/: delayed.rs  minimal.rs  multiple.rs  multiple_enums.rs  multiple_spawners.rs  passing_data.rs  passing_different_data.rs  passing_more_data.rs  query_after_spawn.rs  spawn_on_startup.rs
src/: events.rs  lib.rs  plugin.rs  spawner.rs
src/events/: blanket_impls.rs
