[package]
name = "spew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.10"
default-features = false

[dev-dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "x11",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    #"bevy_pbr",
    "bevy_sprite",
    "bevy_ui",
    #"bevy_gltf",
    #"png"
]
