[package]
name = "spew"
version = "0.3.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2021"
exclude = ["assets", "docs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/spew"
description = "A simple helper for spawning objects in Bevy."
keywords = ["bevy", "spawning", "spawn"]
categories = ["game-development"]

[dependencies.bevy]
version = "0.12"
default-features = false

[dev-dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "x11",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_sprite",
    "bevy_ui",
]
